07/14/2004 Bob Rossi <bob@brasko.net>

    * annotate.c (annotations): Added the 'exited' annotation.
	added 'handle_exited' function.
	added header for stdlib
	* tgdb_types.h (INTERFACE_COMMANDS): Added TGDB_INFERIOR_EXITED
	* tgdb_types.c (tgdb_types_delete_item): Add code to free
	TGDB_INFERIOR_EXITED
	(tgdb_types_print_item): Add code to print a TGDB_INFERIOR_EXITED command.

version 0.5.0 (07/14/2004):

07/14/2004 Bob Rossi <bob@brasko.net>

    * tgdb-base/src/Makefile.am (noinst_bindir): 
	changed top_srcdir to top_builddir

07/12/2004 Bob Rossi <bob@brasko.net>

    * tgdb.c (tgdb_run_command): Used correct field for data in
    raw_input_queue section and free queue 'item'
    (tgdb_send_debugger_char): Append a 'command' to raw_input_queue,
    instead of just adding the 'char*'


version 0.4.2 (05/10/2004):
version 0.4.1 (04/26/2004):

03/31/2004 Bob Rossi <bob@brasko.net>

    * tgdb.c (tgdb_signal_notification): Easier to debug.

03/22/2004 Bob Rossi <bob@brasko.net>
 
    * Doxyfile: Change TAGFILES line to use correct path to html.

03/22/2004 Bob Rossi <bob@brasko.net>
 
    * Doxyfile: Generates a tag via GENERATE_TAGFILE, and uses the tag
	file generated from various, using TAGFILES

03/02/2004 Bob Rossi <bob@brasko.net>

    * Doxyfile: Make the doxygen output QUIET
	* gdbmi/src/gdbmi_tgdb.c: Comply to doxygen

01/30/2004 Bob Rossi <bob@brasko.net>

   * TODO: Updated list of things to do
   * a2-tgdb.h: Remove include of "queue.h"
   * gdbmi_tgdb.h: Remove includes of "queue.h" and "tgdb_client_command.h"
   Add all new function declarations and comments
   * gdbmi_tgdb.c: Create a non-working, compilable stub of the commands that
   the mi needs to implement.
   * driver.c: main_loop, protect select against invalid descriptors
   * tgdb.c: Set's a call to test for annotate-two support 
   * tgdb_client_interface.c: tgdb_client_debugger_interfaces, add initial
   support for gdbmi support.

01/29/2004 Bob Rossi <bob@brasko.net>
